# cpp_learning

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/agents/: cpp-tutor.agent.md
.github/workflows/: ci.yml
docs/: 00-setup.md
lessons/01_basics/: notes.md
lessons/03_control_flow/: notes.md
lessons/03_control_flow/src/: task01_control_flow.cpp
lessons/04_functions/: notes.md
lessons/04_functions/src/: task01_functions.cpp
lessons/05_oop/: notes.md
lessons/05_oop/src/: task01_oop.cpp
lessons/06_templates/: notes.md
lessons/06_templates/src/: task01_templates.cpp
playground/: main.cpp
tools/: build.ps1  format.ps1
